		* When generating values via a mathematical expression ("generate function values"), allow to use variables in CAS-notebooks as source columns
		* Generatation of equidistant values: support for Date&Time and integer columns
		* Generatation of equidistant values: allow to fix the number of values and the increment at the same time
	* [notebook]
		* Export to PDF
		* "Configure CAS" in the menu to create a new notebook to directly allow the user to enable new backends in case not done yet
		* In case the correct path to a CAS like Maxima, etc. was configured, allow to use it without restarting LabPlot
		* Allow to show variable statistics and to plot data from the context menu in the project explorer similarly to spreadsheet columns
	* [import]
		* Templates for ASCII and Binary import filters - allow to save and load current filter settings
		* Support data import from ODS (Open Document Spreadsheet) files
		* When importing tables from SQL databases, allow to specify which data region to read (start/end values for columns and records)
		* Addeded seaborn's datasets to the collection of datasets
		* Properly import Origin projects having graphs with mutliple axes (BUG 476355)

Performance improvements:
	* Make baseline removal much faster by using Eigen3 library (optional dependency)
	* Refactor formula parsing including better error handling

Bug fixes:
	* Set mousemode to selection when leaving the plot (Issue #614)
	* Fix plot range field not being updated (Issue #603)
	* Fix wrong axis tick type used (Issue #571)
	* Fix wrong infoelement position when removing active curve (Issue #666)
	* Fix copying Elements (Issue #622)
	* Fix calculating skewness and kurtosis
	* Support start/end row/column in XLSX import preview

Internal:
	* Switch from C++11 to C++17
	* Support Qt6
	* Reduce code duplication caused by multiple plot types (Issue #540)
	* Update included QXlsx to 1.4.6
	* Build separate libraries for backend, nsl and everything and link