@@ -24,6 +24,7 @@ private Q_SLOTS:
 	void testbetween();
 	void testoutside();
 	void testequalEpsilon();
+	void testRoundn();
 
 	void testevaluateCartesian();
 	void testevaluateCartesianConstExpr();
